--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,3 +49,24 @@ button {
 .api-section > button {
   background-color: darkorange;
 }
+
+
+.profile{
+  width: 100%;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.login{
+  width: 100%;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
